# hatysa

./: .build.yml  .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.builds/: build.yml  mirror.yml
.github/workflows/: ci.yml
hatysa/: Cargo.toml
hatysa/migrations/: 1_create_guild.sql  2_create_karma.sql
hatysa/src/: handler.rs  main.rs  task.rs
iota-orionis/: Cargo.toml
iota-orionis/src/: command.rs  lib.rs
iota-orionis/src/command/: clap.rs  info.rs  karma.rs  react.rs  spongebob.rs  wavy.rs  zalgo.rs
src/: command.rs  handler.rs  lib.rs  main.rs  parse.rs  task.rs
src/command/: clap.rs  info.rs  ping.rs  react.rs  sketchify.rs  spongebob.rs  vape.rs  wavy.rs  zalgo.rs
