[package]
name = "hatysa"
version = "0.2.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
publish = false

[dependencies]
eyre = "^0.6"
reqwest = "^0.9"
thiserror = "^1.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
url = "^2.1"

[dependencies.serenity]
version = "^0.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "^0.2"
features = ["full"]

