[package]
name = "hatysa"
version = "0.2.1"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = "^0.4"
eyre = "^0.6"
lazy_static = "^1.4"
rand = "^0.7"
reqwest = "^0.9"
structopt = "^0.3"
thiserror = "^1.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
url = "^2.1"

[dependencies.serenity]
version = "^0.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "collector"]

[dependencies.tokio]
version = "^0.2"
features = ["full"]

