[package]
name = "hatysa"
version = "0.3.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["discord"]
discord = ["serenity"]

[dependencies]
chrono = "^0.4"
dotenv = "^0.15"
eyre = "^0.6"
rand = "^0.7"
reqwest = "^0.10"
thiserror = "^1.0"
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-subscriber = "^0.2"
url = "^2.2"

[dependencies.serenity]
version = "^0.9"
optional = true
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "collector"]

[dependencies.tokio]
version = "^0.2"
features = ["full"]

