[package]
name = "hatysa"
version = "0.3.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "^0.4"
dotenv = "^0.15"
eyre = "^0.6"
thiserror = "^1.0"
tracing = "^0.1"
tracing-futures = "^0.2"

[dependencies.iota-orionis]
path = "../iota-orionis"

[dependencies.serenity]
version = "^0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "collector"]

[dependencies.tokio]
version = "^1.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter"]
